--- a/fox.html
+++ b/fox.html
@@ -7,7 +7,7 @@
 		<h1 class="PLF">Пустельна Лисиця Франко</h1>
 	</section>
 	<section class="n2">
-		<div id="img"><img src="images/2fox.jpg"></div>
+		<div id="img"><img src="https://raw.githubusercontent.com/Danker01/Fox/9a64112a06bd6ef5a8c0bf46ca3b0952ea3b8549/images/2fox.jpg"></div>
 		<div class="sc">
 			<div id="i1">маленька лисиця фенько може підстрибувати на 120 см</div>
 			<div id="i2">Феньокі живуть в норах з великою кількістю теємних ходів, які викопують самі</div>
@@ -16,7 +16,7 @@
 	</section>
 	<section class="n3">
 		<div><p>Феньок - найдивніша тварина з роду лисиць. Своє ім'я феньок отримав від арабського fanak, що означає «лисиця». Наукова назва фенека "Vulpes zerda" (Vulpes означає приналежність до роду лисиць, zerda походить від грецького слова xeros, що означає "сухий" і вказує на місце проживання феньока - пустелі Північної Африки і Аравійського півострова). Втім, не всі вчені згодні з приналежністю фенека до роду лисиць, вказуючи на відмінності в будові і поведінці Феньок від інших лисиць. Наприклад, у Феньок всього 32 пари хромосом, в той час як у інших видів лисиць їх число коливається між 35 і 39. У Феньок немає мускусних залоз, характерних для лисиць. Лисиці ведуть одічний спосіб життя, в той час як феньок - соціальна тварина. На підставі цих відмінностей деякі вчені виділяють фенека в особливій рід - "Fennecus". </p></div>
-		<img src="images/fox_on_shine.jpg">
+		<img src="https://raw.githubusercontent.com/Danker01/Fox/9a64112a06bd6ef5a8c0bf46ca3b0952ea3b8549/images/fox_on_shine.jpg">
 	</section>
 	<section class="n4">
 		<div class="aaaaa">
