--- a/fox.html
+++ b/fox.html
@@ -3,7 +3,7 @@
 </head>
 <body>
 	<section class="n1">
-		<img src="images/fox2.png" id="nn1">
+		<img src="https://raw.githubusercontent.com/Danker01/Fox/9a64112a06bd6ef5a8c0bf46ca3b0952ea3b8549/images/fox2.png" id="nn1">
 		<h1 class="PLF">Пустельна Лисиця Франко</h1>
 	</section>
 	<section class="n2">
